--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "autoprefixer": "^10.4.16",
+    "dayjs-nuxt": "^2.1.9",
     "mapbox-gl": "^2.15.0",
     "nuxt": "^3.8.0",
     "nuxt-mapbox": "^1.5.0",
